--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,56 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.section-template {
+  max-width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  padding: 5em 1em;
+  font-size: larger;
+}
+
+.projetos-links {
+  background-color: black;
+}
+
+#hero {
+  height: 100vh;
+  padding-top: 1em;
+  font-size: xx-large;
+}
+
+#sobre-mim {
+  background-color: black;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+#projetos {
+  background-color: white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+#habilidades {
+  background-color: black;
+  color: white;
+  padding-bottom: 5em;
+}
+
+h3 {
+  padding: 1em 0;
+}
+
+@media screen and (min-width: 600px) {
+  #hero {
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
   }
-  to {
-    transform: rotate(360deg);
+
+  #sobre-mim {
+    display: flex;
+    flex-direction: row;
+    text-align: left;
+  }
+  
+  #habilidades {
+    background-color: black;
+    color: white;
   }
 }
