--- a/src/components/styles/Card.css
+++ b/src/components/styles/Card.css
@@ -2,23 +2,24 @@
   margin: 1rem;
   padding: 1.5rem;
   text-align: left;
-  color: inherit;
+  color: #F1F1EC;
   text-decoration: none;
-  border: 1px solid black;
+  border: 1px solid #1C2336;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
   width: 300px;
-  background-color: white;
+  background-color: inherit;
 }
 
 .card:first-of-type {
-  height: 182px;
+  height: 189px;
 }
 
 .card:hover,
 .card:focus,
 .card:active {
   border-color: whitesmoke;
+  cursor: pointer;
 }
 
 .card h3 {
