--- a/src/components/styles/Header.css
+++ b/src/components/styles/Header.css
@@ -1,6 +1,5 @@
 header {
-  background-color: rgb(80, 80, 80);
-  color: white;
+  color: #F1F1EC;
   display: flex;
   align-items: center;
   justify-content: space-between;
