--- a/src/components/styles/Card.css
+++ b/src/components/styles/Card.css
@@ -4,7 +4,7 @@
   text-align: left;
   color: #F1F1EC;
   text-decoration: none;
-  border: 1px solid #1C2336;
+  border: 1px solid #F1F1EC;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
   width: 300px;
@@ -18,13 +18,18 @@
 .card:hover,
 .card:focus,
 .card:active {
-  border-color: whitesmoke;
+  border-color: #1C2336;
   cursor: pointer;
 }
 
 .card h3 {
-  margin: 0 0 1rem 0;
+  margin: 0;
   font-size: 1.5rem;
+}
+
+.card hr {
+  width: 100%;
+  margin: .5rem 0 1rem 0;
 }
 
 .card p {
