removes %PUBLIC_URL% for vercel

--- a/src/components/styles/Header.css
+++ b/src/components/styles/Header.css
@@ -2,32 +2,13 @@ header {
   color: #F1F1EC;
   display: flex;
   align-items: center;
-  justify-content: space-between;
   padding: 1.5em 2em;
   width: 100%;
 }
 
-ul {
-  display: flex;
-  gap: 1em;
+header h2 {
+  line-height: 1.5;
+  font-size: 1.5rem;
+  text-decoration: dashed;
 }
 
-li {
-  list-style: none;
-  font-size: larger;
-}
-
-a {
-  text-decoration: none;
-  color: white;
-}
-
-a:hover {
-  text-decoration: underline;
-}
-
-@media screen and (max-width: 600px) {
-  header {
-    display: none;
-  }
-}
