--- a/src/components/styles/Header.css
+++ b/src/components/styles/Header.css
@@ -2,13 +2,17 @@ header {
   color: #F1F1EC;
   display: flex;
   align-items: center;
-  padding: 1.5em 2em;
+  padding: .5em 2em 1.5em;
   width: 100%;
+}
+
+header h1 {
+  font-size: 3.5rem;
 }
 
 header h2 {
   line-height: 1.5;
-  font-size: 1.5rem;
+  font-size: 1.6rem;
   font-style: italic;
 }
 
