--- a/index.css
+++ b/index.css
@@ -4,10 +4,10 @@
   --font-family: "Victor Mono", monospace;
   --line-height: 1.20rem;
   --border-thickness: 2px;
-  --text-color: #0D1117;
-  --text-color-alt: #151B23;
-  --background-color: #F0F6FC;
-  --background-color-alt: #9198A1;
+  --text-color: #080808;
+  --text-color-alt: #202327;
+  --background-color: #E7E9EA;
+  --background-color-alt: #D1D3D4;
 
   --font-weight-normal: 500;
   --font-weight-medium: 600;
@@ -23,10 +23,10 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --text-color: 	#F0F6FC;
-    --text-color-alt: #9198A1;
-    --background-color: #0D1117;
-    --background-color-alt: #151B23;
+    --text-color: 	#E7E9EA;
+    --text-color-alt: #D1D3D4;
+    --background-color: #080808;
+    --background-color-alt: #202327;
   }
 }
 
