--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
     line-height: 1.4;
     -webkit-hyphens: auto;
     -ms-hyphens: auto;
-    hyphens: auto
+    hyphens: auto;
 }
 
 header {
@@ -76,4 +76,43 @@ footer {
     border-top: 1px solid #333;
     color: #666;
     text-align: center;
+}
+
+.hamburger {
+    display: none;
+    font-size: 30px;
+    background: none;
+    border: none;
+    color: #d9d9d9;
+    cursor: pointer;
+}
+
+#nav-list {
+    display: flex;
+    gap: 1em;
+}
+
+@media screen and (max-width: 550px) {
+    #nav-list {
+        display: none;
+        position: absolute;
+        right: 20px;
+        background-color: #000;
+        padding: 1em;
+        border: #333 1px solid;
+    }
+
+    .hamburger {
+        display: block;
+    }
+
+    #nav-list.active {
+        display: flex;
+
+    }
+
+    nav ul {
+        flex-direction: column;
+        gap: 1em;
+    }
 }
